k8s/hello-cibus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-cibus
  namespace: production
  labels:
    app: hello-cibus
spec:
  replicas: 2

  selector:
    matchLabels:
      app: hello-cibus

  template:
    metadata:
      labels:
        app: hello-cibus
    spec:
      containers:
        - name: hello-cibus
          image: your-dockerhub-user/hellocibus:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 20

      restartPolicy: Always
