k8s/hello-cibus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-cibus
  namespace: production
  labels:
    app: hello-cibus
spec:
  type: ClusterIP

  selector:
    app: hello-cibus

  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
