k8s/hello-cibus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-cibus
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: hello-cibus.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-cibus
                port:
                  number: 80
